# SmartChatBot

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  audio_out.c  audio_out.h  button.c  button.h  comm.c  comm.h  idf_component.yml  led.c  led.h  main.c  mic.c  mic.h  oled.c  oled.h  oled_font.h  opus_codec.c  opus_codec.h  state_machine.c  state_machine.h  wifi.c  wifi.h
tools/: server.py
